ecmascript/parser/tests/test262-error-references/fail/4d579849c75cfef9.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/4d579849c75cfef9.js:4:2
  |
4 | {
  |  ^

